--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Blurry Loading Image</title>
 </head>
 <body>
-  
+  <section class="bg"></section>
+  <div class="loading-text">0%</div>
 
   <script src="./assets/script/index.js"></script>
 </body>
